--- a/gallery.html
+++ b/gallery.html
@@ -4,32 +4,47 @@ title: Gallery
 ---
 
 <h1>Gallery</h1>
+
+<h2>Seasons</h2>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/spring.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/spring.jpg?raw=true" height = "150" alt="spring" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/fall.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/fall.jpg?raw=true" height = "150" alt="fall" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/summer.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/summer.jpg?raw=true" height = "150" alt="summer" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/winter.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/winter.jpg?raw=true" height = "150" alt="winter" /></a>
+
+<h2>Foods</h2>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/foods/beef_egg.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/foods/beef_egg.jpg?raw=true" height = "100" alt="beef_egg" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/foods/shrimp.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/foods/shrimp.jpg?raw=true" height = "100" alt="shrimp" /></a>
+
+
 <h2>United States</h2>
 <h3>Los Angeles</h3>
-<p>Santa Monica</p>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_1.jpg?raw=true" height = "100" alt="santa_monica_1" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_2.jpg?raw=true" height = "100" alt="santa_monica_2" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_3.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_3.jpg?raw=true" height = "100" alt="santa_monica_3" /></a>
-<p>Hollywood</p>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/hollywood.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hollywood.jpg?raw=true" height = "100" alt="hollywood" /></a>
-<p>Griffith Observatory</p>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/griffith.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/griffith.jpg?raw=true" height = "100" alt="griffith" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/mid_autumn_festival.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/mid_autumn_festival.jpg?raw=true" height = "100" alt="mid_autumn_festival" /></a>
+<p>USC campus</p>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/usc.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc.jpg?raw=true" width = "178" height = "100" alt="usc" /></a> <!---16:9--->
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/usc_campus.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_campus.jpg?raw=true" height = "100" alt="usc_campus" /></a> <!---16:9--->
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/usc_cpa.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_cpa.jpg?raw=true" width = "178" height = "100" alt="usc_cpa" /></a>
 <p>Universal Studios</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/universal_studios.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/universal_studios.jpg?raw=true" height = "100" alt="universal_studios" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/hogwarts_express.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hogwarts_express.jpg?raw=true" height = "100" alt="hogwarts_express" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/hogwarts_castle.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hogwarts_castle.jpg?raw=true" width = "150" height = "100" alt="hogwarts_castle" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/the_monster_book_of_monsters.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/the_monster_book_of_monsters.jpg?raw=true" width = "150" height = "100" alt="the_monster_book_of_monsters" /></a>
-<p>USC campus</p>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/usc.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc.jpg?raw=true" width = "178" height = "100" alt="usc" /></a> <!---16:9--->
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/usc_campus.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_campus.jpg?raw=true" height = "100" alt="usc_campus" /></a> <!---16:9--->
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/usc_cpa.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_cpa.jpg?raw=true" width = "178" height = "100" alt="usc_cpa" /></a>
-<p>Downtown</p>
+<p>Santa Monica</p>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_1.jpg?raw=true" height = "100" alt="santa_monica_1" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_2.jpg?raw=true" height = "100" alt="santa_monica_2" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_3.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_3.jpg?raw=true" height = "100" alt="santa_monica_3" /></a>
+<p>City Views</p>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/sunset.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/sunset.jpg?raw=true" height = "100" alt="sunset" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/griffith.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/griffith.jpg?raw=true" height = "100" alt="griffith" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/mid_autumn_festival.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/mid_autumn_festival.jpg?raw=true" height = "100" alt="mid_autumn_festival" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/hollywood.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hollywood.jpg?raw=true" height = "100" alt="hollywood" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/la_downtown.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_downtown.jpg?raw=true" width = "222" height = "100" alt="la_downtown" /></a> <!---20:9--->
-<p>Union Station</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/la_union_station.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_union_station.jpg?raw=true" width = "150" height = "100" alt="la_union_station" /></a> <!---3:2--->
-<p>Big Bear Lake</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true" width = "150" height = "100" alt="a_leaf_at_big_bear_lake" /></a>
+
+<h3>Hawaii</h3>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/hawaii/garden.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/hawaii/garden.jpg?raw=true" height = "100" alt="garden" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/hawaii/temple.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/hawaii/temple.jpg?raw=true" height = "100" alt="temple" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/hawaii/beach_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/hawaii/beach_1.jpg?raw=true" height = "100" alt="beach_1" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/hawaii/beach_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/hawaii/beach_2.jpg?raw=true" height = "100" alt="beach_2" /></a>
 
 <h3>San Franciso</h3>
 <p>Golden State Bridge</p>
@@ -45,12 +60,6 @@ title: Gallery
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_2.jpg?raw=true" height = "100" alt="south_beach_2" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_3.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_3.jpg?raw=true" height = "100" alt="south_beach_3" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/miami.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/miami.jpg?raw=true" height = "100" alt="miami" /></a>
-
-<h3>seasons</h3>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/spring.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/spring.jpg?raw=true" height = "100" alt="spring" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/fall.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/fall.jpg?raw=true" height = "100" alt="fall" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/summer.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/summer.jpg?raw=true" height = "100" alt="summer" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/winter.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/winter.jpg?raw=true" height = "100" alt="winter" /></a>
 
 
 <h2>China</h2>
@@ -70,7 +79,15 @@ title: Gallery
 <h3>Hong Kong</h3>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/hongkong/hk_mountain_view.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/hongkong/hk_mountain_view.jpg?raw=true" height = "100" alt="hk_mountain_view" /></a>
 
+<h3>Shen Zhen</h3>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/shenzhen/sz_city_view_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/shenzhen/sz_city_view_1.jpg?raw=true" height = "100" alt="sz_city_view_1" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/shenzhen/sz_city_view_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/shenzhen/sz_city_view_2.jpg?raw=true" height = "100" alt="sz_city_view_2" /></a>
+
 <h3>Anqing</h3>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/library.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/library.jpg?raw=true" height = "100" alt="library" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/qiaolou.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/qiaolou.jpg?raw=true" height = "100" alt="qiaolou" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/nanlou.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/nanlou.jpg?raw=true" height = "100" alt="nanlou" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/sundial.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/sundial.jpg?raw=true" height = "100" alt="sundial" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/anqing_no1_middle_school.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/anqing_no1_middle_school.jpg?raw=true" width = "133" height = "100" alt="anqing_no1_middle_school" /></a> <!---4:3--->
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/lake.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lake.jpg?raw=true" width = "133" height = "100" alt="lake" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/yangtze_river.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/yangtze_river.jpg?raw=true" width = "133" height = "100" alt="yangtze_river" /></a> 
