03/28/2025, update a few posts

--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@ title: Gallery
 <h3>Hong Kong</h3>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/hongkong/hk_mountain_view.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/hongkong/hk_mountain_view.jpg?raw=true" height = "100" alt="hk_mountain_view" /></a>
 
-<h3>Shen Zhen</h3>
+<h3>Shenzhen</h3>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/shenzhen/sz_city_view_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/shenzhen/sz_city_view_1.jpg?raw=true" height = "100" alt="sz_city_view_1" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/shenzhen/sz_city_view_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/shenzhen/sz_city_view_2.jpg?raw=true" height = "100" alt="sz_city_view_2" /></a>
 
